--- a/modules/ROOT/pages/security/security.adoc
+++ b/modules/ROOT/pages/security/security.adoc
@@ -33,7 +33,7 @@ Infinite Scale provides a flexible role system, which allows the permissions of 
 
 === Extension System
 
-Compared to the apps/extensions in ownCloud 10, the Infinite Scale extensions/services are more secure because they are developed and deployed as standalone services. They communicate via APIs with the core services and therefore can only use specific interfaces instead of having direct access to storages and data. A single  extension which behaves incorrectly cannot corrupt the whole system.
+Compared to the apps/extensions in ownCloud 10, the Infinite Scale extensions/services are more secure because they are developed and deployed as standalone services. They communicate via APIs with the core services and therefore can only use specific interfaces instead of having direct access to storages and data. A single extension which behaves incorrectly cannot corrupt the whole system.
 
 === File-based storage
 
@@ -41,7 +41,7 @@ Infinite Scale is designed to work without a database. This means fewer services
 
 === Golang
 
-Developing Infinite Scale from scratch, ownCloud decided to switch from PHP to Golang. This eliminates a bunch of security risks that come with PHP, like _Remote File Inclusion_, _Local File Inclusion_ and others. Golang also has a good file system API easing to protect against directory traversal issues.
+Developing Infinite Scale from scratch, ownCloud decided to switch from PHP to Golang. This eliminates a bunch of security risks that come with PHP, like _Remote File Inclusion_, _Local File Inclusion_ and others. Golang also has a good file system API easing the protection against directory traversal issues.
 
 The fact that Golang is statically typed helps reduce the amount of logic errors.
 
