--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -74,10 +74,13 @@ Infinite Scale can be deployed via container or you can run the binary installed
 
 NOTE: We highly recommend reading the xref:deployment/general/general-info.adoc[General Info] document first before starting to plan or deploy Infinite Scale. This document contains important topics relevant for all deployments.
 
-////
-=== Configuration
+=== Configuration Examples
 
-xref:configuration/index.adoc[Configuration] of Infinite Scale is quite different to what you're used to and has never been easier. It works with environment variables and optional configuration files for you to create depending on your specific needs. The settings in configuration files can always be overruled by setting the respective environment variables manually on the command line.
+Configuration of Infinite Scale might be quite different to what you are used to but it's very simple. It works with environment variables and optional configuration files for you to create depending on your specific needs. The settings in configuration files can always be overruled by setting the respective environment variables manually on the command line.
+
+Some xref:configuration/index.adoc[examples] with explanations provide guidance.
+
+////
 
 === Maintenance
 
