--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -304,6 +304,15 @@ NOTE: You must set this environment variable to a valid path when using the manu
 
 WARNING: The location must exclusively be used by Infinite Scale. Writing into this location not using Infinite Scale is strictly discouraged to avoid any unexpected behaviour. 
 
+[IMPORTANT]
+====
+Consider using an own partition or an external filesystem like NFS for the data path. If you only have one partition for your OS, Infinite Scale and your data, *filling up the filesystem with user data can make your system unresponsible*. This can easily happen with following conditions: 
+
+* The total space consumed by all Spaces, even if there are individual quotas set for Spaces, exeeds the available disk space.
+* When multiple users have concurrent uploads of big files, those big files - as not finished - will not count against the target Space quota. These files are temporarily located in the upload folder located in the data path and moved when finished to the target Space if the target Space quota gets not exeed.
+* Expired uploads that have not been cleaned up (see xref:manage-unfinished-uploads[Manage Unfinished Uploads]) can demand storage unnecessarily and can be a hidden cause exceeding the available storage space.
+====
+
 == Default Users and Groups
 
 Default users and groups are only created when you initialize Infinite Scale as first task. The same is true for demo users and groups which need an environment variable to be set _on initializing Infinite Scale_ to get created.
