refactor helm upgrade command

--- a/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
@@ -628,7 +628,7 @@ endif::[]
 +
 [source,bash]
 ----
-helm upgrade ocis ./charts/ocis --values values.yaml
+helm upgrade --install --reset-values ocis ./charts/ocis --values values.yaml
 ----
 
 * Ensure that all the pods are running:
