split line in two

--- a/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
@@ -628,7 +628,8 @@ endif::[]
 +
 [source,bash]
 ----
-helm upgrade --install --reset-values ocis ./charts/ocis --values values.yaml
+helm upgrade --install --reset-values \
+    ocis ./charts/ocis --values values.yaml
 ----
 
 * Ensure that all the pods are running:
