Add ocis search index command

--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -409,3 +409,24 @@ If you are using a reverse proxy like Traefik and the reverse proxy manages the 
 == Manage Unfinished Uploads
 
 See xref:deployment/services/storage-users.adoc#manage-unfinished-uploads[Manage Unfinished Uploads] at the _Storage Users_ service for details. 
+
+== Reindex a Space for Search
+
+In rare cirumstances, it can happen that it is necessary to initiate reindexing manually for a given space or user. Though the search service handles exeption cases automatically, it can happen that the search service was not able to complete indexing due to a dirty shut down of the service or because of a bug. The following command should *only* be run on explicit request and supervision of ownCloud support. Note that behaviour and options may change without special notice. 
+
+[source,bash]
+----
+ocis search index
+NAME:
+   ocis search index - index the files for one one more users
+
+USAGE:
+   ocis search index [command options] [arguments...]
+
+CATEGORY:
+   index management
+
+OPTIONS:
+   --space value, -s value  the id of the space to travers and index the files of
+   --user value, -u value   the username of the user that shall be used to access the files
+----
